# cai-platform

./: .env.example  .gitignore  CLAUDE.md  Makefile  README.md  compose.yml  logs-ejemplo.md
.github/workflows/: deploy.yml
apps/cai-orchestrator/: README.md  pyproject.toml
apps/cai-orchestrator/src/cai_orchestrator/: __init__.py  __main__.py  app.py  blueteam_agents.py  cai_terminal.py  cai_tools.py  client.py  config.py  ddos_agents.py  email_bridge.py  errors.py  flows.py  imap_monitor.py  log_monitor.py  phishing_agents.py
apps/cai-orchestrator/src/cai_orchestrator/report/: collect.py  generate.py  narrative.py  styles.css  template.html
apps/cai-orchestrator/src/cai_platform_orchestrator.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
apps/platform-api/: Dockerfile  README.md  pyproject.toml
apps/platform-api/src/cai_platform_api.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
apps/platform-api/src/platform_api/: __init__.py  __main__.py  app.py  errors.py  schemas.py
apps/platform-api/src/platform_api/routes/: __init__.py  artifacts.py  cases.py  health.py  queries.py  runs.py  s3.py
apps/platform-api/src/platform_api/runtime/: __init__.py  memory.py  postgres.py  wiring.py
apps/platform-ui/: Dockerfile  pyproject.toml
apps/platform-ui-next/: Dockerfile  next.config.ts  package-lock.json  package.json
apps/platform-ui/src/platform_ui/: __init__.py  app.py
docs/: README.md  presentacion-plataforma-cai.md
docs/adr/: README.md
docs/apps/: README.md
docs/architecture/: 2026-03-31-run-lifecycle-hardening-report.md  README.md  arquitectura-nube.md  next-steps-2026-04.md  pendientes.md  plan-ddos-investigation.md  (+1 more)
logs/: cai_04bbdb92-1fe9-4511-9036-4b582948c0de_20260317_044155_ubuntu_linux_6.14.0-1018-aws_18_191_44_175.jsonl  cai_292cffcb-918c-4d2b-991c-1119c72cb6c7_20260317_043643_ubuntu_linux_6.14.0-1018-aws_18_191_44_175.jsonl
tests/: README.md
(+94 files in other folders)
