[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "cai-platform-ui"
version = "0.1.0"
description = "Streamlit UI for cai-platform — wraps the orchestrator layer"
requires-python = ">=3.12"
dependencies = [
  "streamlit>=1.40",
  "cai-platform-orchestrator>=0.1.0",
  "boto3>=1.35",
]

[project.optional-dependencies]
cai = [
  "cai-framework>=0.5.10",
]

[tool.setuptools.packages.find]
where = ["src"]
